fix: scroll when task list overflows

--- a/src/style.scss
+++ b/src/style.scss
@@ -10,6 +10,12 @@
   margin: auto;
   min-height: 800px;
   background-color: #ffffff;
+  overflow-y: scroll;
+  max-height: 100vh;
+  &::-webkit-scrollbar {
+    display: none;
+  }
+  scrollbar-width: none;
 }
 
 /* TaskListPage */
